--- a/internal/server/ui/components/file_explorer/context_menu_items/component.templ
+++ b/internal/server/ui/components/file_explorer/context_menu_items/component.templ
@@ -2,7 +2,7 @@ package context_menu_items
 
 import (
 	"autobutler/internal/server/ui/types"
-	"autobutler/pkg/util"
+	"autobutler/pkg/util/fileutil"
 	"fmt"
 	"io/fs"
 	"path/filepath"
@@ -12,9 +12,9 @@ import (
 // Can be used in floating menus or inline menus
 templ Component(pageState types.PageState, file fs.FileInfo, rootDir string) {
 	{{
-		fileType := util.DetermineFileType(rootDir, file)
+		fileType := fileutil.DetermineFileType(rootDir, file)
 		fileName := file.Name()
-		isFolder := fileType == util.FileTypeFolder
+		isFolder := fileType == fileutil.FileTypeFolder
 		downloadPath := filepath.Join("/api/v1/files", rootDir, fileName)
 	}}
 	if !isFolder {
