--- a/internal/server/ui/components/file_explorer/file_viewer/image_viewer/component.templ
+++ b/internal/server/ui/components/file_explorer/file_viewer/image_viewer/component.templ
@@ -1,14 +1,14 @@
 package image_viewer
 
 import (
-	"autobutler/pkg/util"
+	"autobutler/pkg/util/fileutil"
 	"encoding/base64"
 	"os"
 	"path/filepath"
 )
 
 func readImageAsBase64(filePath string) (string, error) {
-	rootDir := util.GetFilesDir()
+	rootDir := fileutil.GetFilesDir()
 	fullPath := filepath.Join(rootDir, filePath)
 	data, err := os.ReadFile(fullPath)
 	if err != nil {
