419: Fix imports for db
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/calendar/monthView.templ
+++ b/internal/server/ui/components/calendar/monthView.templ
@@ -4,7 +4,7 @@ import "time"
 import "fmt"
 
 import "autobutler/pkg/calendar"
-import "autobutler/pkg/db"
+import "autobutler/internal/db"
 import "autobutler/internal/server/ui/components/icons/left_arrow"
 import "autobutler/internal/server/ui/components/icons/right_arrow"
 
